--- a/css/footer.css
+++ b/css/footer.css
@@ -106,7 +106,7 @@
   }
   .fo_list a {
     color: #fff;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
   }
   .fo_list p {
     color: #fff;
@@ -194,6 +194,7 @@
 
   .up a {
     color: #fff;
+    font-size: 14px;
   }
   .up span {
     color: #fff;
@@ -265,6 +266,7 @@
 
   .up a {
     color: #fff;
+    font-size: 14px;
   }
   .up span {
     color: #fff;
