--- a/css/main.css
+++ b/css/main.css
@@ -412,6 +412,7 @@ a {
     background: #111;
     padding: 0.8vw;
     display: none;
+    
   }
   #con2 > .beauty_list:nth-of-type(1) {
     opacity: 0;
@@ -482,7 +483,7 @@ a {
   }
   .wrap {
     width: 100%;
-    height: 75vh;
+    height: 43vw;
     margin-top: 5vw;
     background: url(../img/BG.jpg);
   }
@@ -1100,7 +1101,7 @@ a {
   }
   .wrap {
     width: 100%;
-    height: 70vh;
+    height:52vw;
     margin-top: 5vw;
     background: url(../img/BG.jpg);
   }
@@ -1714,7 +1715,7 @@ a {
   }
   .wrap {
     width: 100%;
-    height: 68vh;
+    height: 52vw;
     margin-top: 5vw;
     background: url(../img/BG.jpg);
   }
@@ -1801,7 +1802,7 @@ a {
   .slidecon2 {
     width: 100%;
     position: absolute;
-    top: 28%;
+    top: 30%;
     z-index: 999;
   }
   .slidecon2 .next2 {
