--- a/css/best.css
+++ b/css/best.css
@@ -466,7 +466,7 @@ a {
   }
   .con4_box a {
     color: #fff;
-    font-size: 1vw;
+    font-size: 15px;
   }
   .con4_box:hover {
     border: 1px solid #111;
@@ -539,7 +539,6 @@ a {
   /*con2*/
   #con2 {
     width: 100%;
-
   }
 
   .con2_product {
@@ -887,7 +886,7 @@ a {
     margin: 0px auto;
   }
   .con4_box {
-    width: 18%;
+    width: 25%;
     padding: 1vw;
     background: #111;
     margin: 4vw auto 8vw;
@@ -895,7 +894,7 @@ a {
   }
   .con4_box a {
     color: #fff;
-    font-size: 1.2vw;
+    font-size: 1.3vw;
     line-height: 2vw;
   }
   .con4_box:hover {
@@ -975,7 +974,6 @@ a {
   /*con2*/
   #con2 {
     width: 100%;
-  
   }
 
   .con2_product {
@@ -1419,7 +1417,6 @@ a {
   /*con2*/
   #con2 {
     width: 100%;
-  
   }
 
   .con2_product {
@@ -1506,7 +1503,6 @@ a {
   }
   .con2_product1 p {
     font-size: 13px;
-   
   }
 
   .color_box {
@@ -1672,7 +1668,7 @@ a {
   }
 
   .con3_box {
-    width: 60%;
+    width: 40%;
     padding: 3vw;
     background: #111;
     margin: 5vw auto 0vw;
@@ -1687,6 +1683,7 @@ a {
     transform: translate(-50%, -50%);
     color: #fff;
     font-size: 2vw;
+    width: 100%;
   }
 
   .con3_box:hover {
@@ -1774,7 +1771,7 @@ a {
     margin: 0px auto;
   }
   .con4_box {
-    width: 50%;
+    width: 35%;
     padding: 3vw;
     background: #111;
     margin: 10vw auto 15vw;
@@ -1784,11 +1781,11 @@ a {
   .con4_box a {
     color: #fff;
     font-size: 2vw;
-    line-height: 2vw;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 100%;
   }
   .con4_box:hover {
     border: 1px solid #111;
