--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,6 @@ a {
   }
   #con1 {
     width: 100%;
-    height: 100vh;
   }
   .round {
     width: 100%;
@@ -243,7 +242,7 @@ a {
     animation: up 1s 0.5s ease-out forwards;
   }
   .holiday_list {
-    width: 60%;
+    width: 80%;
     margin: 5vw auto;
     display: flex;
     justify-content: space-between;
@@ -276,8 +275,9 @@ a {
     top: 50%;
     transform: translate(-50%, -50%);
     background: #111;
-    padding: 1vw;
+    padding: 0.6vw;
     display: none;
+    width: 40%;
   }
 
   .holiimg:hover .more {
@@ -301,17 +301,20 @@ a {
     font-size: 18px;
   }
   #con1 .box {
-    width: 40%;
-    height: 5vh;
+    width: 45%;
+    padding: 1.2vw;
     background: #111;
     margin: 2vw auto;
     border: 1px solid #111;
+    position: relative;
   }
   #con1 .box a {
     color: #fff;
-    height: 5vh;
-    line-height: 5vh;
     font-size: 0.8vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   #con1 .box:hover {
     background: transparent;
@@ -408,11 +411,10 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 30%;
+    width: 40%;
     background: #111;
-    padding: 0.8vw;
+    padding: 0.6vw;
     display: none;
-    
   }
   #con2 > .beauty_list:nth-of-type(1) {
     opacity: 0;
@@ -434,8 +436,7 @@ a {
   }
   .beauty_list p {
     text-align: center;
-    padding-top: 5vw;
-    font-size: 0.7vw;
+    font-size: 1vw;
   }
   .list_text1 span {
     color: #fff;
@@ -1101,7 +1102,7 @@ a {
   }
   .wrap {
     width: 100%;
-    height:52vw;
+    height: 52vw;
     margin-top: 5vw;
     background: url(../img/BG.jpg);
   }
@@ -1980,7 +1981,7 @@ a {
   }
   .visual_box a {
     color: #fff;
-    font-size: 16px;
+    font-size: 14px;
   }
   .visual_box:hover {
     background: transparent;
@@ -1999,7 +2000,7 @@ a {
     z-index: 999;
   }
   .navi li {
-    width: 30px;
+    width: 25px;
     height: 5px;
     background: #ccc;
     cursor: pointer;
@@ -2120,7 +2121,7 @@ a {
     top: 50%;
     transform: translate(-50%, -50%);
     background: #111;
-    height: 6vw;
+    padding: 1vw;
     width: 40%;
     display: none;
     line-height: 4vw;
@@ -2132,7 +2133,6 @@ a {
   .more a {
     color: #fff;
     font-size: 2vw;
-    line-height: 6vw;
   }
   .holiday_list h4 {
     font-size: 3.5vw;
@@ -2148,17 +2148,20 @@ a {
     font-size: 2.2vw;
   }
   #con1 .box {
-    width: 40%;
-    height: 4vh;
+    width: 35%;
+    padding: 2.5vw;
     background: #111;
-    margin: 2vw auto 8vw;
+    margin: 5vw auto 8vw;
     border: 1px solid #111;
+    position: relative;
   }
   #con1 .box a {
     color: #fff;
-    height: 4vh;
-    line-height: 4vh;
-    font-size: 2vw;
+    font-size: 2.2vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   #con1 .box:hover {
     background: transparent;
@@ -2464,6 +2467,7 @@ a {
     width: 500%;
     opacity: 0;
   }
+
   .exclu_slide.on {
     animation: up 1s 1.5s ease-out forwards;
   }
@@ -2519,6 +2523,9 @@ a {
   }
   .slidecon .next {
     right: 5%;
+  }
+  .slidecon span {
+    font-size: 14px;
   }
 }
 @media (max-width: 391px) {
@@ -2735,8 +2742,8 @@ a {
     top: 50%;
     transform: translate(-50%, -50%);
     background: #111;
-    height: 7vw;
-    width: 40%;
+    padding: 1vw;
+    width: 30%;
     display: none;
     line-height: 4vw;
   }
@@ -2746,8 +2753,7 @@ a {
   }
   .more a {
     color: #fff;
-    font-size: 2.5vw;
-    line-height: 7vw;
+    font-size: 2vw;
   }
   .holiday_list h4 {
     font-size: 4vw;
@@ -2844,12 +2850,6 @@ a {
     width: 80%;
     margin: 0px auto;
   }
-  /*
-.beauty_list img {
-  width: 100%;
-  height: 20vw;
-}
-*/
 
   .listimg {
     position: relative;
