--- a/css/event.css
+++ b/css/event.css
@@ -1074,6 +1074,7 @@ a {
   /*con3*/
   #con3 {
     width: 100%;
+    height: 600px;
   }
   .con3_1 {
     width: 100%;
@@ -1448,6 +1449,7 @@ a {
   /*con3*/
   #con3 {
     width: 100%;
+    height: 600px;
   }
   .con3_1 {
     width: 100%;
