--- a/css/brand.css
+++ b/css/brand.css
@@ -879,11 +879,11 @@ a {
   }
   .ysl_1 li {
     width: 90%;
-    height: 50vh;
     margin: 0px auto;
   }
   .ysl_1 img {
     width: 100%;
+    padding-top: 20vw;
   }
   .ysl_text {
     width: 90%;
@@ -899,12 +899,7 @@ a {
     line-height: 5.5vw;
     padding-top: 10vw;
   }
-  .y3 li:nth-of-type(1) {
-    padding-top: 40vw;
-  }
-  .y3 li:nth-of-type(2) {
-    padding-top: 20vw;
-  }
+
   /**/
 
   .row-outer {
@@ -915,7 +910,7 @@ a {
   }
   .heading h1 {
     font-size: 28px;
-    padding: 30vw 0;
+    padding: 30vw 0 10vw;
     color: #fff;
     opacity: 0;
     font-family: "Playfair Display", serif;
@@ -1009,6 +1004,7 @@ a {
     width: 80%;
     color: #fff;
     margin: 0px auto;
+    height: 400px;
   }
   .ysl_text2 h2 {
     font-size: 15px;
