--- a/css/main.css
+++ b/css/main.css
@@ -2235,12 +2235,6 @@ a {
     width: 80%;
     margin: 0px auto;
   }
-  /*
-.beauty_list img {
-  width: 100%;
-  height: 20vw;
-}
-*/
 
   .listimg {
     position: relative;
@@ -2440,6 +2434,7 @@ a {
   }
   .exclusive {
     width: 100%;
+    height: 300px;
     text-align: center;
     position: relative;
     padding-bottom: 10vw;
@@ -2773,15 +2768,18 @@ a {
   }
   #con1 .box {
     width: 40%;
-    height: 3vh;
+    padding: 3vw;
     background: #111;
     margin: 2vw auto 8vw;
     border: 1px solid #111;
+    position: relative;
   }
   #con1 .box a {
     color: #fff;
-    height: 3vh;
-    line-height: 3vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-size: 2.5vw;
   }
   #con1 .box:hover {
@@ -2944,6 +2942,7 @@ a {
   #con3 {
     width: 100%;
     position: relative;
+    height: 300px;
   }
   .wrap {
     width: 100%;
