--- a/css/brand.css
+++ b/css/brand.css
@@ -149,22 +149,24 @@ a {
     position: relative;
   }
   .ysl_1 {
-    width: 100%;
+    width: 80%;
+    margin:50px auto;
     display: flex;
-    height: 100vh;
+    justify-content: space-between;
+    height: 70vh;
   }
   .ysl_1 li {
     width: 38%;
-    height: 100vh;
+    height: 100%;
     margin: 0px auto;
   }
   .ysl_1 img {
     width: 100%;
-    height: 80%;
+    height: 100%;
   }
   .ysl_text {
-    width: 80%;
-    padding-top: 12vw;
+    width: 100%;
+    padding-top: 6vw;
     color: #fff;
   }
   .ysl_text h3 {
@@ -173,7 +175,7 @@ a {
   .ysl_text p {
     font-size: 18px;
     line-height: 2vw;
-    padding-top: 2vw;
+    padding-top: 4vw;
   }
 
   /**/
@@ -391,30 +393,32 @@ a {
     position: relative;
   }
   .ysl_1 {
-    width: 100%;
+    width: 80%;
+    justify-content: space-between;
+    margin:50px auto;
     display: flex;
-    height: 80vh;
+    height: 60vh;
   }
   .ysl_1 li {
     width: 38%;
-    height: 100vh;
+    height: 100%;
     margin: 0px auto;
   }
   .ysl_1 img {
     width: 100%;
-    height: 60%;
+    height:100%;
   }
   .ysl_text {
-    width: 80%;
-    padding-top: 10vw;
+    width: 100%;
+    padding-top: 8vw;
     color: #fff;
   }
   .ysl_text h3 {
-    font-size: 22px;
+    font-size: 28px;
   }
   .ysl_text p {
-    font-size: 14px;
-    line-height: 2vw;
+    font-size: 16px;
+    line-height: 2.5vw;
     padding-top: 4vw;
   }
 
@@ -769,7 +773,7 @@ a {
     margin: 0px auto;
   }
   .ysl_text2 h2 {
-    font-size: 22px;
+    font-size: 3.8vw;
     font-family: "Playfair Display", serif;
     opacity: 0;
   }
@@ -778,7 +782,7 @@ a {
   }
   .ysl_text2 h3 {
     padding-top: 5vw;
-    font-size: 15px;
+    font-size: 2.6vw;
     opacity: 0;
   }
   .ysl_text2 h3:nth-of-type(1).on {
